<resources>

    <string name="app_name">Check-UP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sign_in">Check-UP</string>

    <!-- Page Titles -->
    <string name="page_checklist">Checklist</string>
    <string name="page_grades">Grades</string>
    <string name="page_status">Status</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signin">Sign In</string>
    <string name="noaccount">No Account Yet?</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_sign_out">SignOut</string>
    <string name="signoutmsg">You are now signed out.</string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="this_is_tab1">Status</string>
    <string name="this_is_tab_2">Checklist</string>
    <string name="this_is_tab_3">History</string>
    <string name="this_is_tab_4">Sign Out</string>
   

</resources>